@@ -4,6 +4,7 @@ x.x:
 
 - added: bulk delete listing/action for super admins to remove users
 - added: option to disable subsite topbar
+- added: option to disable htmlawed filtering for admins on subsites
 - fixed: user can no longer register on an invitation only site without invitation
 - fixed: no information when no members found
 - fixed: using a non existing function invalidate_cache_for_entity
